# dns-speedtest

./: .gitignore  README.md  pyproject.toml
source/: main.py
sql/: combined_dns_data.sql  get-pcap-data.sql  get_speedtest_data.sql  speedtest.sql  view.sql
src/: __main__.py  constants.py  lambda.py  main.py  models.py  server.py  tmp.py  utils.py
src/server/: dns.py  pcap.py  speedtest.py
