[tool.poetry]
name = "dns-speedtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
dnslib = "^0.9.25"
sqlalchemy = "^2.0.32"
mysql-connector-python = "^9.0.0"
toml = "^0.10.2"
ipinfo = "^5.0.1"
googleapiutils2 = "^0.14.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
